[package]
name = "identity-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { version = "0.6" }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = { version = "0.4" }
