[package]
name = "identity-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { version = "0.6" }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = { version = "0.4" }
actix-web = "4"
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
dotenv = { version =  "0.15.0", default-features = false }



yew = { git = "https://github.com/yewstack/yew", features = ["ssr"] } # Change this to your path

reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }